--- a/tableau.html
+++ b/tableau.html
@@ -6,24 +6,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tableau</title>
+    <link rel="Stylesheet" href="Style.css/StyleSheet.css">
 
 </head>
 
 <body>
     
 <header>
+
     <div style="text-align: left;">
-        <img src="img/assets/jarditou_logo.jpg" width="350" height="100" alt="Jarditoulogo">
-        <p>La qualité depuis 70 ans</p>
+
+        <img src="img/assets/jarditou_logo.jpg" width="200" height="65" alt="Jarditoulogo">
+
+        <p class="Slogan"> La qualité depuis 70 ans</p>
+
     </div>
+
 </header>
 
 <nav>
+
     <ul>
 
         <li><a href="index.html" title="Page Suivante">Accueil</a><br></li>
         <li><a href="tableau.html" title="Page Suivante">Tableau</a><br></li>
         <li><a href="contact.html" title="Page Suivante">Contact</a><br></li>
+        
     </ul>
 
 </nav>
@@ -32,7 +40,8 @@
 
     <div>
  
-        <img src="img/assets/promotion.jpg" alt="Promotion">
+        <img id="promotion" src="img/assets/promotion.jpg" alt="Promotion">
+
       <h1> TABLEAUX </h1>
    
     </div>
@@ -52,7 +61,9 @@
    <td><b>Libellé</b></td>
    <td><b>Prix</b></td>
    <td><b>Couleur</b></td>
+
 </tr>
+
 <tr>
         <td><img src="img/assets/7.jpg" height="100" alt="7.jpg"></td>
         <td>7</td>
@@ -60,24 +71,29 @@
         <td>Aramis</td>
         <td>110.00€</td>
         <td>Brun</td>
+
 </tr>
 
 <tr>
+
     <td><img src="img/assets/8.jpg" width="100" height="100" alt="8.jpg"></td>
         <td>8</td>
         <td>Barbecues</td>
         <td>Athos</td>
         <td>249.99€</td>
         <td>Noir</td>
+
 </tr>
 
 <tr>
+
     <td><img src="img/assets/11.jpg" width="100" height="100" alt="11.jpg"></td>
         <td>11</td>
         <td>Barbecues</td>
         <td>Clastronic</td>
         <td>135.90€</td>
         <td>Chrome</td>
+
 </tr>
 
 <tr>
@@ -88,6 +104,7 @@
         <td>Camping</td>
         <td>88.00€</td>
         <td>Noir</td>
+
     </tr>
 
     <tr>
