--- a/contact.html
+++ b/contact.html
@@ -62,8 +62,7 @@
 
             <br>
 
-                  <label for="Sexe">Sexe:</label><input type="radio" name="Sexe" value="Féminin" id="Sexe">Féminin
-                    <input type="radio" name="Sexe" value="Homme"> Homme <br>
+            <span>Sexe:</span>         <label for="sexe" name="sexe" id="sexe_f" ></label><input type="radio" name="sexe" id="sexe_f" value="Feminin">Féminin          <label for="sexe" name="sexe" id="sexe_m"></label><input type="radio" name="sexe" id="sexe_m" value="Masculin">Masculin<br>
 
             <br>
 
