--- a/contact.html
+++ b/contact.html
@@ -16,8 +16,9 @@
 
     <Header>
 
-    <img src="img/assets/jarditou_logo.jpg" width="350" height="100" alt="Logo Jarditou">
-
+    <img class="LogoJardi" src="img/assets/jarditou_logo.jpg" width="350" height="100" alt="Logo Jarditou">
+        
+    <p class="Slogan"> La qualité depuis 70 ans </p>
 
     </Header>
     
